# torrent-downloader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.cache/: cache.db
.github/: dependabot.yml
.github/workflows/: ci.yml
src/torrent_downloader/: __init__.py  main.py  metadata.py  search.py
src/torrent_downloader/core/: __init__.py  auth.py  cache.py  config.py  constants.py  errors.py  limiter.py  logger.py  middleware.py  settings_manager.py
src/torrent_downloader/routers/: __init__.py  search.py  system.py  transfers.py
src/torrent_downloader/schemas/: downloads.py  errors.py  system.py  tmdb.py  torrents.py  transfers.py
src/torrent_downloader/services/: __init__.py  qbittorrent.py  storage.py  tmdb.py
src/torrent_downloader/utils/: vpn_checker.py
tests/: conftest.py  test_auth.py  test_config.py  test_error_handler.py  test_errors.py  test_middleware.py  test_qbittorrent.py  test_qbittorrent_scope.py  test_rate_limit.py  test_routes_system.py  test_routes_tmdb_details.py  test_routes_tmdb_search.py  test_routes_torrent_search.py  test_routes_transfers.py  test_schemas_downloads.py  test_search.py  test_storage.py  test_tmdb_extractors.py
