[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "torrent-downloader"
dynamic = ["version"]
description = "FastAPI microservice wrapping qBittorrent and TMDB for media download automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.136.1",
    "parse-torrent-title>=2.8.2",
    "pydantic-settings>=2.14.1",
    "qbittorrent-api>=2026.5.1",
    "requests>=2.34.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
]

[project.scripts]
torrent-downloader = "torrent_downloader.main:main"
torrent-downloader-dev = "torrent_downloader.main:dev"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/torrent_downloader/_version.py"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
