[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "torrent-downloader"
dynamic = ["version"]
description = "FastAPI microservice wrapping qBittorrent and TMDB for media download automation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "fastapi>=0.136.1",
    "idna>=3.15",
    "medialab-contracts",
    "parse-torrent-title>=2.8.2",
    "pydantic-settings>=2.14.2",
    "qbittorrent-api>=2026.5.1",
    "requests>=2.34.0",
    "slowapi>=0.1.10",
    "starlette>=1.3.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
torrent-downloader = "torrent_downloader.main:main"
torrent-downloader-dev = "torrent_downloader.main:dev"


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/torrent_downloader/_version.py"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLR2004"]
# UP042: keep `(str, Enum)` rather than `StrEnum` - consistent across all
# services and the future medialab-contracts shared enums; flipping str()
# semantics on one service mid-stream would diverge the suite.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

# Type-tightening backfill (tracked): the router `responses=` dicts and the
# qBittorrent client's Literal/stub mismatches predate the mypy gate. They are
# annotation accuracy, not behavior bugs, and are relaxed here to land the
# standards backfill green. Remove these overrides as each module is tightened.
[[tool.mypy.overrides]]
module = [
    "torrent_downloader.routers.*",
    "torrent_downloader.services.qbittorrent",
]
disable_error_code = ["arg-type", "dict-item", "assignment", "index"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real secrets or a live external service; skipped in CI",
]

[tool.uv.sources]
medialab-contracts = { git = "https://github.com/MickMarch/medialab-contracts", rev = "v0.3.0" }
